@@ -49,6 +49,9 @@ Fixed bugs:
 
 * IPlanetEjbc was looking in the wrong place for four iiop files.
 
+* <javac> would pass the -source switch to JDK 1.3's javac, even
+  though it doesn't support it.
+
 Other changes:
 --------------
 
